--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="home">
         <header>
             <nav class="navbar">
-                <a href="#"><img src="images/logo.png" id="logo" alt="" srcset="" /></a>
+                <a href="#"><img src="images/logo.png" id="logo" alt="logo" srcset="" /></a>
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">FEATURES</a></li>
